maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:59: error: ';' expected but '=' found.
    (c)=garM(c)
       ^